fix: scrollbar issue with theme switcher

--- a/src/app.css
+++ b/src/app.css
@@ -68,12 +68,8 @@
   --page-padding: 1rem;
   --ease-out-expo: cubic-bezier(0.16, 1, 0.3, 1);
   --transition: 0.3s var(--ease-out-expo);
-  scrollbar-gutter: stable;
 }
 
-body {
-  scrollbar-gutter: stable;
-}
 
 .transition {
   transition: var(--transition);
